--- a/src/assets/scss/components/place.scss
+++ b/src/assets/scss/components/place.scss
@@ -1,15 +1,18 @@
 .main-content-place {
-    height: 88%;
+    height: 85%;
     font-family: 'IBM Plex Mono', monospace;
 
     .place-info {
         padding: 2em 7em;
-        height: 80%;
+        height: 100%;
     
         .place-grid {
             display: grid;
+            position: relative;
+            top:5%;
+
             grid-template-columns: 30% 70%;
-            grid-template-rows: 75% 25%;
+            grid-template-rows: 20% 50% 30%;
            
             height: calc(100% - 7em);
            
@@ -17,18 +20,19 @@
                 
                 &:nth-of-type(1) {
                     grid-column: 1 / 2;
-                    grid-row: 1 / 2;
+                    grid-row: 2 / 3;
                 
                     img {
                         height: 100%;
                         width: 100%;
-                        border-radius: 50%;
+                      
+                        box-shadow: 3px 5px 20px rgba(0, 0, 0, 0.55);
                     }
                 }
                 
                 &:nth-of-type(2) {
                     grid-column: 2 / 3;
-                    grid-row: 1 / 3;
+                    grid-row: 1 / 4;
                     
                     margin-left: 2em;
                     border: 1px black solid;
@@ -55,145 +59,203 @@
                         display: flex;
                         justify-content: center;
                         
-                    
-                        .place-info__colaborator-container {
-                            width: 70%;
+                        .place-info__listings-container {
+                            width: 50%;
                             position: relative;
+                            display:flex;
 
                             border-top: 2px black solid;
+                            overflow-y: scroll;
+                            overflow-x: hidden;
 
-                            .place-info__colaborator {
-                                position: absolute;
-                                top:10%;
-                                width: 100%;
-                                
-                                font-size: 1.5em;
-                                text-align: center;
-                            }
-                    
-                            img {
-                                position: absolute;
-                                top:40%;
-                                left:50%;
-                                transform:translatex(-50%);
-
+                            .place-listings__selector{
+                                height: 10%;
                                 width: 50%;
-                                height: 50%;
+        
+                                border-bottom: 2px solid black;
+                                
+                                &:not(:last-of-type) {
+                                    border-right: 2px solid black;
+                                  }
+
+                                .listings__checkbox{
+                                    display: none;
+                                    
+                                    &:checked + label {
+                                        color: hsl(204, 70%, 53%);
+                                      }
+                                      
+                                    &:checked ~ .place-listings__content {
+                                        display: block;
+                                        opacity:1;
+                                    }
+                                }
+
+                              
+                                label{
+                                    cursor: pointer;
+                            
+                                    .listings__selector-title__container{
+                                        position: relative;
+                                        width: 100%;
+                                        height: 100%;
+                                        .listings__selector-title{
+                                            position: absolute;
+
+                                            top:50%;
+                                            transform:translateY(-50%);
+
+                                            width: 100%;
+                                            text-align: center;
+                                        }
+                                        
+                                        &:hover {
+                                            color: hsl(204, 70%, 53%);
+                                            }
+                                    }
+                                }
+                                .place-listings__content{
+                                    position: absolute;
+                                    top:4em;
+                                    left: 1em;
+                                    width: 95%;
+
+                                    display: none;
+                                    opacity:0;
+
+                                    @include listings;
+                                    transition: all .3s ease-in-out;
+                                }
                             }
                         }
+
                         .place-info__details-container {
-                            width: 30%;
+                            width: 50%;
+                            height: 100%;
                             border-left: 2px black solid;
                             border-top: 2px black solid;
 
-                            position: relative;
 
-                            .place-info__details-title {
-                                position: absolute;
-                                top:10%;
-                                width:100%;
+                            .place-info__slideshow-container{
+                                position: relative;
+                                height: 100%;
+                                width: 100%;
+                                .slide{
+                                    position: absolute;
+                                    top:15%;
+                                    left:10%;
 
-                                font-size: 1.5em;
-                                text-align: center;
-                            }
+                                    opacity: 0;
+                                    width: 80%;
+                                    height: 60%;
 
-                            .place-info__details {
-                                padding: 1.5em;
+                                    transition: all .3s ease-in-out;
 
-                                position: absolute;
-                                top:40%;
-                                width:100%;
-                                li {
-                                    text-align: center;
+                                    .slide__text{
+                                        width: 100%;
+                                        text-align: center;
+
+                                    }
+                                    
+                                    img{
+                                      width: 100%;
+                                      height: 100%;
+                                    }
                                 }
+
+                                .prev, .next {
+                                    color: grey;
+                                    font-weight: bold;
+                                    font-size: 5em;
+                                    
+                                    position: absolute;
+                                    top: 50%;
+                                    transform: translateY(-50%);
+                                    width: auto;
+                                  
+                                    cursor: pointer;
+                                    transition: 0.6s ease;
+                                    border-radius: 0 3px 3px 0;
+                                  
+                                  }
+                                  .next {
+                                    right: 0;
+                                    border-radius: 3px 0 0 3px;
+                                  }
+                                  
+                                  .prev:hover, .next:hover {
+                                    background-color: rgba(0,0,0,0.8);
+                                  }
                             }
                          }
                     }
                 }
+
                 &:nth-of-type(3) {
                     grid-column: 1 / 2;
-                    grid-row: 2/ 3;
+                    grid-row: 3/ 4;
+                    
+                    .place-subscribe__container{
+                         height: 100%;
+                         position: relative;
                   
-                    position: relative;
-                  
-                    .place-listings__button {
-                        border: black solid 2px;
-                  
-                        position: absolute;
-                        height: 50%;
-                        width: 50%;
-                        left: 50%;
-                        top: 50%;
-                        transform: translate(-50%, -50%);
-                  
-                        text-align: center;
-                        line-height: 100%;
-                        background-color:  hsl(203, 57%, 82%);
-                        transition: all 0.5s;
-                  
-                        h2 {
-                            display: inline-block;
-                            
-                            vertical-align: middle;
-                            text-transform: uppercase;
-                            pointer-events: none;
-                            color:hsl(210, 28%, 29%);
-                            
+                        .place-listings__button {
+                            border: black solid 2px;
+                    
+                            position: absolute;
+                            height: 40%;
+                            width: 50%;
+
+                            top:30%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                    
+                            text-align: center;
+                            line-height: 100%;
+                            background-color:  hsl(203, 57%, 82%);
                             transition: all 0.5s;
-                        }
+                    
+                            h2 {
+                                position: absolute;
+                                display: inline-block;
+                                
+                                top:50%;
+                                transform: translate(-50%, -50%);
 
-                        &:hover {
-                            background-color:  hsl(210, 28%, 29%);
+                                vertical-align: middle;
+                                text-transform: uppercase;
+                                pointer-events: none;
+                                color:hsl(210, 28%, 29%);
+                                
+                                transition: all 0.5s;
+                            }
 
-                            h2{
-                                color:hsl(203, 57%, 82%);
+                            &:hover {
+                                background-color:  hsl(210, 28%, 29%);
+
+                                h2{
+                                    color:hsl(203, 57%, 82%);
+                                }
                             }
                         }
+
+                        .place-listings__subscribers{
+                            position: relative;
+                            height: 50%;
+                            width: 100%;
+                            top:50%;
+
+                            .place-listings__subscribers-number{
+                                position: absolute;
+                                left:50%;
+                                transform: translatex(-50%);
+                            }
+                        }
+                        
                     }
                 }
             }
         }
     }
-    .place-recommendations {
-        height: 15%;
-        position: relative;
-        
-
-        .recommendations-container {
-            height: 100%;
-            width: 85%;
-            
-            position: absolute;
-            left:9%;
-            display: flex;
-            justify-content: space-around;
-
-            .single-recomamendation {
-              top: -30%;
-              width: 10%;
-              height: 120%;
-              position: relative;
-              
-              .recommendations-container--title{
-                font-size: 2em;
-                opacity: 0;
-
-                transition:all 1s;
-                pointer-events: none;
-                text-align: center;
-                text-transform: uppercase;
-              }
-              img{
-                width: 100%;
-                height: 80%;
-             }
-             &:hover .recommendations-container--title{
-                 opacity: 1;
-             }
-            }
-
-
-        }
-        
-    }
+ 
 }
