--- a/src/assets/scss/components/place.scss
+++ b/src/assets/scss/components/place.scss
@@ -65,7 +65,7 @@
                             display:flex;
 
                             border-top: 2px black solid;
-                            overflow-y: scroll;
+                            overflow-y: auto;
                             overflow-x: hidden;
 
                             .place-listings__selector{
@@ -256,6 +256,63 @@
                 }
             }
         }
+    }
+    .subscribed-people{
+        display: none; 
+        position: fixed; 
+
+        z-index: 1;
+        left: 0;
+        top: 0;
+
+        width: 100%; 
+        height: 100%; 
+        overflow: auto; 
+
+        background-color: rgba(0,0,0,0.4); 
+
+        .subscribed-people__content{
+            position: relative;
+            padding: 2px;
+         
+            background-color: #fefefe;
+            border: 1px solid #888;
+            margin:auto;
+
+            top:50%;
+            transform: translateY(-50%);
+            width: 30%;
+            height:50%;
+            .subscribed-people__content-header{
+                position: relative;
+                width: 100%;
+                height: 10%;
+                
+                border-bottom: 2px solid black;
+                .subscribed-people__close {
+                    position: absolute;
+                    right:0;
+                    top:0;
+                    color: #aaaaaa;
+                
+                    font-size: 2em;
+                    font-weight: bold;
+                    
+                    &:hover{
+                        color: #000;
+                        text-decoration: none;
+                        cursor: pointer;
+                 }    
+            }
+            .subscribed-people__title{
+                position: absolute;
+                left: 50%;
+                top:50%;
+                transform: translate(-50%,-50%);
+            }
+          }
+        }
+    
     }
  
 }
